--- a/src/components/CourseComments/CourseAddComment/style.scss
+++ b/src/components/CourseComments/CourseAddComment/style.scss
@@ -4,22 +4,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-right: 20px;
+
 }
 
 .course-add-comment-image__container {
   display: grid;
   justify-content: center;
   align-items: center;
+
 }
 
 .course-add-comment-button__container {
-  padding-right: 20px;
+  padding-right: 5vmin;
   padding-top: 20px;
 }
 
 .course-add-comment-button {
-  background-color: #f15d5d !important;
+  background-color: #3a9c47 !important;
 }
 
 @media screen and (max-width: 600px) {
@@ -29,5 +30,11 @@
 
   .course-add-comment-image {
     display: none !important;
+  }
+}
+
+@media screen and (max-width: 700px){
+  .course-add-comment-textField__container{
+    padding-right: 10px;
   }
 }
