--- a/src/components/StudentProfile/style.scss
+++ b/src/components/StudentProfile/style.scss
@@ -5,6 +5,7 @@
   }
 }
 .mainPro {
+  justify-content: space-evenly;
   padding-top: 80px;
   display: flex;
   flex-direction: row;
@@ -55,6 +56,7 @@
 }
 
 .welcomebox {
+  text-align: center;
   @media (min-width: 600px) {
     position: sticky;
     top: 80px;
@@ -72,7 +74,7 @@
       margin: 0px 20px 20px;
     }
     @media (max-width: 600px) {
-      margin: 20px 0px;
+      margin: 0px 0px;
     }
     img {
       margin: auto;
@@ -107,7 +109,12 @@
     }
   }
   &__color-modal {
-    margin:5px
-
+    margin: 20px;
+  }
+}
+.marginBox{
+  @media (min-width: 600px) {
+    margin-left: 15px;
+    margin-right: 8px;
   }
 }
