--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -1,16 +1,17 @@
 @import '/src/theme/main.scss';
 
-.header_search {
-  margin-top: 50px;
-}
+
 .navbar{
-  // --color: #22d1d3;
-  background-color: #fff;
-  grid-template-columns: 
-    max-content
-    min-content
-    auto
-    min-content;
+
+&__search-bar{
+  display: flex;
+  padding: 0 7%;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  width: 100%;
+  margin-top: 60px;
+}
 }
 .desktop_navbar {
   
@@ -25,3 +26,4 @@
     }
   }
 }
+
