--- a/src/components/Filters/style.scss
+++ b/src/components/Filters/style.scss
@@ -130,114 +130,119 @@
 }
 
 .filters-page {
+  margin-top: 64px;
   &__title {
     padding: 24px;
     border-bottom: 1px solid #eee;
     font-size: 24px;
   }
+}
 
-  .filters {
-    position: sticky;
-    top: 0;
-    border-bottom: 1px solid #eee;
-    z-index: 100;
-    padding: 16px;
-    background-color: #f8f8f8;
+.filters {
+  position: sticky;
+  top: 60px;
+  border-bottom: 1px solid #eee;
+  z-index: 100;
+  padding: 16px;
+  background-color: #f8f8f8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__search-wrapper {
     display: flex;
-    flex-direction: column;
+    overflow: hidden;
     align-items: center;
+    background-color: #fff;
+    display: flex;
+    padding: 0;
+    width: 100%;
+    max-width: 1024px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+  }
 
-    &__search-wrapper {
-      display: flex;
-      overflow: hidden;
-      align-items: center;
-      background-color: #fff;
-      display: flex;
-      padding: 0;
-      width: 100%;
-      max-width: 1024px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-    }
-
-    &__search-input {
-      padding: 16px;
-      font-size: 16px;
-      border: none;
-      outline: none;
-      width: 100%;
-      &::placeholder {
-        color: #888;
-      }
-    }
-
-    &__search-icon {
-      padding: 0 16px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    &__other-filters {
-      display: flex;
-      margin: auto;
-      width: 100%;
-      max-width: 1024px;
-    }
-
-    &__filter-wrapper {
-      flex-grow: 1;
-      margin: 16px 8px;
-      margin-bottom: 0;
-      &:first-of-type {
-        margin-right: 0;
-      }
-
-      &:last-of-type {
-        margin-left: 0;
-      }
-    }
-
-    &__filter {
-      padding: 16px;
-      background-color: #fff;
-      font-size: 16px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
+  &__search-input {
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    width: 100%;
+    &::placeholder {
       color: #888;
-    }
-
-    &__subjects {
-      display: flex;
-      align-items: center;
-      margin-top: 8px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    &__subject {
-      border: 1px solid rgb(203, 233, 242);
-      color: rgb(43, 167, 206);
-      background-color: rgba(234, 246, 250, 0.75);
-      padding: 8px 16px;
-      margin: 8px 4px 0;
-      cursor: pointer;
-      border-radius: 32px;
-      font-weight: 500;
-      &:hover {
-        background-color: rgba(225, 234, 236, 0.77);
-      }
-      &.active {
-        background-color: #255dad;
-        color: #fff;
-        border-color: rgba(37, 93, 173, 0.25);
-      }
     }
   }
 
+  &__search-icon {
+    padding: 0 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__other-filters {
+    display: flex;
+    margin: auto;
+    width: 100%;
+    max-width: 1024px;
+  }
+
+  &__filter-wrapper {
+    flex-grow: 1;
+    margin: 16px 8px;
+    margin-bottom: 0;
+    &:first-of-type {
+      margin-right: 0;
+    }
+
+    &:last-of-type {
+      margin-left: 0;
+    }
+  }
+
+  &__filter {
+    padding: 16px;
+    background-color: #fff;
+    font-size: 16px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    color: #888;
+  }
+
+  &__subjects {
+    display: flex;
+    align-items: center;
+    margin-top: 8px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  &__subject {
+    border: 1px solid rgb(203, 233, 242);
+    color: rgb(43, 167, 206);
+    background-color: rgba(234, 246, 250, 0.75);
+    padding: 8px 16px;
+    margin: 8px 4px 0;
+    cursor: pointer;
+    border-radius: 32px;
+    font-weight: 500;
+    &:hover {
+      background-color: rgba(225, 234, 236, 0.77);
+    }
+    &.active {
+      background-color: #255dad;
+      color: #fff;
+      border-color: rgba(37, 93, 173, 0.25);
+    }
+  }
   @media (max-width: 768px) {
     .filters {
       padding: 8px;
+    }
+
+    &__subjects {
+      justify-content: flex-start;
+      margin-bottom: 24px;
     }
   }
 }
