--- a/src/components/ClassDashboard/style.scss
+++ b/src/components/ClassDashboard/style.scss
@@ -96,6 +96,7 @@
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
   flex-shrink: 0;
   overflow: hidden;
+  min-height: 100%;
 
   &__img-top {
     position: absolute;
