--- a/src/components/DashboardTeacherBankAccount/style.scss
+++ b/src/components/DashboardTeacherBankAccount/style.scss
@@ -1,1 +1,82 @@
 @import '../../theme/main.scss';
+.BankCard {
+  justify-content: center;
+  background-attachment: fixed;
+  background-size: cover;
+  background-attachment: fixed;
+  background-size: cover;
+  background-size: cover;
+  background-size: cover;
+  text-align: center;
+  padding: 8px;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px !important;
+  width: 55vmin;
+  height: 300px;
+  border-radius: 10px;
+  box-shadow: rgb(42, 31, 75) 0px 2px 10px;
+  background-color: rgb(16, 97, 100);
+}
+.CardNumber {
+  margin-top: 20px;
+  font-weight: 800;
+  font-size: large;
+  color: rgb(6, 7, 58);
+}
+.CardName {
+  font-size: 20px !important;
+  font-weight: 700 !important;
+  color: rgb(207, 207, 207) !important;
+  margin-top: 30px !important;
+  width: 220px !important;
+}
+
+.kenareham {
+  display: flex;
+  flex-direction: row;
+}
+
+.credit-card-input {
+  padding: 5px;
+  width: 100px !important;
+  height: 60px !important;
+  background-color: transparent;
+  border: none;
+  font-size: 40px !important;
+  color: white;
+  margin-top: 50px !important;
+
+  &:focus {
+    outline: none !important;
+  }
+
+  &::placeholder {
+    color: rgb(201, 193, 193);
+  }
+}
+
+.shaba {
+  padding: 5px !important;
+  height: 40px !important;
+  background-color: transparent;
+  border: none;
+  font-size: 15px !important;
+  color: white;
+  width: 230px !important;
+
+  &:focus {
+    outline: none !important;
+  }
+
+  &::placeholder {
+    color: rgb(201, 193, 193);
+    font-size: 18px;
+    font-weight: 1000px !important;
+  }
+}
+
+
+.credit-card-submit{
+  background-color: rgb(26, 128, 97) !important;
+}
