--- a/src/components/BaseAssignments/style.scss
+++ b/src/components/BaseAssignments/style.scss
@@ -36,7 +36,7 @@
     padding: 20px;
   }
   #drop-area.highlight {
-    border-color: purple;
+    border-color: rgb(104, 16, 16);
   }
   p {
     margin-top: 0;
@@ -88,7 +88,7 @@
   }
   .MyHeader{
     font-size: x-large;
-    color: rgb(32, 0, 61);
+    color: rgb(104, 16, 16);
     padding-bottom: 15px ;
   }
   .Box{
@@ -100,18 +100,18 @@
   }
   }
   .editor{
-    background-color: rgb(203, 217, 255);
+    background-color: rgb(255, 238, 252);
     min-height: 350px;
     border-radius: 1%;
     margin-bottom: 20px;
     padding: 15px;
     border-style:groove;
-    border-color:darkslateblue;
+    border-color:rgb(104, 16, 16);
   }
   .mytxt{
     font-size: large;
     font-weight: 800;
-    color: rgb(65, 0, 126);
+    color: rgb(104, 16, 16);
   }
   .Bt{
     width: max-content;
@@ -120,9 +120,9 @@
     margin-top: 5px;
     margin-right: auto;
     border-radius: 10%;
-    background-color: rgb(75, 67, 126);
+    background-color: rgb(104, 16, 16);
     border-style:double;
-    border-color:rgb(181, 200, 253);
+    border-color:rgb(255, 232, 239);
     &__txt{
       margin: auto;
       font-size: medium;
@@ -134,23 +134,23 @@
     padding: 2px;
     font-weight: 600;
     font-size: 14px;
-    background-color: rgb(225, 220, 255);
+    background-color:rgb(255, 238, 252);
     margin: 2px;
     height: 43px;
     width: 255px;
     border-radius: 1%;
   }
   .MyUp{
-    background-color: rgb(203, 217, 255);
+    background-color: rgb(255, 238, 252);
     padding: 15px;
     margin-bottom: 7px;
-    border-style:dashed;
-    border-color:darkslateblue;
+    border-style:groove;
+    border-color:rgb(104, 16, 16);
   }
   .Border{
     border-style:groove;
-    border-color:darkslateblue;
+    border-color:rgb(104, 16, 16);
   }
   .color{
-    background-color:  rgb(249, 251, 255);
+    background-color:  rgb(255, 255, 255);
   }
